Add 2 GET endpoints for the PUT update and POST create vehicle setup
